# MUICE_UCO_Code

./: .gitignore  README.md
1º Cuatrimestre/[ADP] - Análisis, Diseño y Procesamiento de Datos Aplicados a las Ciencias y a las Tecnologías/Prácticas/: README.md
1º Cuatrimestre/[CS] - Ciberseguridad/Proyecto/: README.md
1º Cuatrimestre/[IoT] - Internet de las Cosas/Proyecto/: Smart Garden 2.pkt  Smart Garden.pkt  Smart Garden_Modificado_v2.pkt  Smart Garden_Modificado_v3.pkt  Smart Garden_Modificado_v4.pkt
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 1/1.2. cbg_process/cbg_process/: CHANGELOG.TXT  CMakeLists.txt  LEEME.TXT  README.md  cbg_process.cpp  common_code.hpp
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 1/2.2. edge_detector/: CMakeLists.txt  LEEME.TXT  README.md  commo_code_original.cpp  common_code.cpp  common_code.hpp  edge_detector.cpp  test_common_code.cpp
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 1/2.2. edge_detector/data/mini-berkely/: README.md
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 2/4.par_stereo/: 1_stereo_calibrate copy.cpp  1_stereo_calibrate.cpp  1_stereo_calibrate_save.cpp  3_stereo_disparity.cpp  4_stereo_sparse.cpp  CMakeLists.txt  calibration.cpp  calibration.yml  stereoparms.yml
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 2/4.par_stereo/images/monocular/cam0/: cam0-2views.pcd  cam0-3views.pcd
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 2/4.par_stereo/images/monocular/cam2/: calibration.yml  cam2-2views.pcd  cam2-3views.pcd
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 2/4.par_stereo/images/stereo/: stereoparms.yml
1º Cuatrimestre/[V3D] - Visión 3D y Aplicaciones/Prácticas/Parte 2/4.par_stereo/images/stereo/reconstruction/: recontruction1-half.pcd  recontruction1.pcd
1º Cuatrimestre/[V3D] - Visión y Aplicaciones 3D/Prácticas/Parte 2/3.1_cameracalibration/: CMakeLists.txt  augReal one cube tried more.cpp
2º Cuatrimestre/[AW] - Analítica de web/2. Amelia Azafra/: .RData  .Rhistory  Actividad1.IndicadoresRed.docx  Actividad2.IndicadoresNodoVisualizacion.docx  Actividad3.IndicadoresGrupo.docx  AplicarAnalisisSentimiento(lexico).ipynb  RedAlba-edges.csv  RedAlba-nodes.csv  RedAlba.csv  Reviews-red.csv  karate-enlaces.csv  karate-nodos.csv  new nodes.xlsx  tarea1.gephi
2º Cuatrimestre/[AW] - Analítica de web/3. Cristobal/: StudentsPerformace_Analysis.ipynb
2º Cuatrimestre/[AW] - Analítica de web/María Luque/: Calculo_De_Metricas copy.ipynb  Calculo_De_Metricas.ipynb
2º Cuatrimestre/[CAP] - Computación de Altas Prestaciones/Proyecto/: driver_gemm  driver_gemm.c  driver_gemm_1.c
2º Cuatrimestre/[Opta 1] - A/Bloque IVa/: Modelo_simulink_masa_muelle_amortiguador.slx  Tiro_parabolico.m  Tiro_parabolico_analitico_mod.m  Tiro_parabolico_mod.m  pedulo_analitico.m  pedulo_analitico_subamortiguado_mod.m  pedulo_sobreamortiguado.m  (+6 more)
TFM/: 1 Petición (1).docx  README.md
(+286 files in other folders)
